force-app/main/default/objects/Quote/Quote.object-meta.xml
<CustomObject>
</CustomObject>