force-app/main/default/objects/Quote/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description
  >Proposed billing cadence on this quote. Backed by Northstar_Billing_Frequency GVS. Carries onto Order and Contract on acceptance.</description>
    <inlineHelpText
  >How often the customer will be billed if this quote is accepted.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Billing_Frequency</valueSetName>
    </valueSet>
</CustomField>