force-app/main/default/objects/Quote/fields/Discount_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Status__c</fullName>
    <description
  >Per-dimension approval lifecycle for the Quote's blended line-item discount (Not Required / Pending / Approved / Rejected). Automation-only: QuoteTriggerHandler escalates to Pending when the blended discount exceeds the threshold and the Quote Discount approval process records the decision. One of the three independent dimensions (discount / legal / finance) that replace the single conflated Approval_Status__c gate.</description>
    <inlineHelpText
  >Discount approval lifecycle. Maintained by the Quote trigger and the discount approval process.</inlineHelpText>
    <label>Discount Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>