force-app/main/default/objects/Quote/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description
  >Date this quote was sent to the customer / went into effect. Distinct from Quote.ExpirationDate (standard) and from Subscription_Start_Date__c on the parent Opportunity — Effective_Date marks when terms apply for negotiation purposes.</description>
    <inlineHelpText
  >Date the quote was sent / went into effect for negotiation.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>