force-app/main/default/objects/Quote/fields/Finance_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Status__c</fullName>
    <description
  >Per-dimension approval lifecycle for a below-margin-floor Services line (Not Required / Pending / Approved / Rejected). Automation-only: QuoteTriggerHandler escalates to Pending from DealDeskService.requiresFinanceReview (the per-line services-floor check) and the Services Margin approval process records the decision. One of the three independent dimensions (discount / legal / finance) that replace the single conflated Approval_Status__c gate.</description>
    <inlineHelpText
  >Finance (services margin) approval lifecycle. Maintained by the Quote trigger and the services margin approval process.</inlineHelpText>
    <label>Finance Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>