force-app/main/default/objects/Quote/fields/Implementation_Package__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Package__c</fullName>
    <description
  >Implementation engagement quoted with this proposal. Backed by Northstar_Implementation_Package GVS. Read by the provisioning trigger once the resulting Order is created.</description>
    <inlineHelpText>Implementation package being quoted.</inlineHelpText>
    <label>Implementation Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Implementation_Package</valueSetName>
    </valueSet>
</CustomField>