force-app/main/default/objects/Quote/fields/Legal_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval_Status__c</fullName>
    <description
  >Per-dimension approval lifecycle for non-standard legal/payment terms (Not Required / Pending / Approved / Rejected). Automation-only: QuoteTriggerHandler escalates to Pending when Legal_Terms_Required__c is checked and the Non-Standard Terms approval process records the decision. One of the three independent dimensions (discount / legal / finance) that replace the single conflated Approval_Status__c gate.</description>
    <inlineHelpText
  >Legal approval lifecycle. Maintained by the Quote trigger and the non-standard terms approval process.</inlineHelpText>
    <label>Legal Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>