force-app/main/default/objects/Quote/fields/Legal_Terms_Required__c.field-meta.xml
<CustomField>
    <fullName>Legal_Terms_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when this quote requires Legal review of non-standard terms (custom MSA, unusual indemnity, modified SLA). Triggers the Non-Standard Terms approval process.</description>
    <inlineHelpText
  >Check if Legal review of non-standard terms is needed.</inlineHelpText>
    <label>Legal Terms Required</label>
    <type>Checkbox</type>
</CustomField>