force-app/main/default/objects/Quote/fields/Procurement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Notes__c</fullName>
    <description
  >Free-form notes for procurement / vendor-management contacts (e.g. PO number requested, vendor onboarding steps, payment instructions). Carries onto Order on acceptance.</description>
    <inlineHelpText>Notes for the customer's procurement team.</inlineHelpText>
    <label>Procurement Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>