force-app/main/default/objects/Quote/fields/Total_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Percent__c</fullName>
    <description
  >Total effective discount across all QLIs, expressed as a percentage (0-100). Calculated by the Quote trigger from per-QLI Discount values weighted by UnitPrice × Quantity. Distinct from the standard Quote.Discount field (which is per-quote and applies to the whole subtotal).</description>
    <inlineHelpText
  >Weighted average discount % across line items. Trigger-maintained.</inlineHelpText>
    <label>Total Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>