force-app/main/default/objects/Quote/fields/Validity_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Validity_Period_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description
  >How many days the quote remains valid after Effective_Date__c. Default 30. Used by the quote-aging flow to flag stale quotes that need re-issuing.</description>
    <inlineHelpText
  >How long this quote is valid (days from Effective Date). Default 30.</inlineHelpText>
    <label>Validity Period (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>