force-app/main/default/objects/Quote/recordTypes/Enterprise_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Enterprise_Subscription</fullName>
    <active>true</active>
    <description
  >Subscription quotes for Strategic/Enterprise customers; routes through Deal Desk approval.</description>
    <label>Enterprise Subscription</label>
</RecordType>