force-app/main/default/objects/Quote/recordTypes/Services_Statement_of_Work.recordType-meta.xml
<RecordType>
    <fullName>Services_Statement_of_Work</fullName>
    <active>true</active>
    <description>Implementation/Services SOWs (one-time revenue).</description>
    <label>Services Statement of Work</label>
</RecordType>