force-app/main/default/objects/Quote/recordTypes/Standard_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Standard_Subscription</fullName>
    <active>true</active>
    <description
  >Subscription quotes for Commercial/Mid-market customers.</description>
    <label>Standard Subscription</label>
</RecordType>