force-app/main/default/objects/Quote/validationRules/Finance_Review_Below_Floor_Services.validationRule-meta.xml
<ValidationRule>
    <fullName>Finance_Review_Below_Floor_Services</fullName>
    <active>true</active>
    <description
  >a Quote with a Services line below the margin floor can't be Accepted until Finance approves. Keys off the per-dimension Finance_Approval_Status__c (independent of legal/discount) so one approval can't satisfy another.</description>
    <errorConditionFormula
  >ISPICKVAL(Status, &quot;Accepted&quot;) &amp;&amp; (ISPICKVAL(Finance_Approval_Status__c, &quot;Pending&quot;) || ISPICKVAL(Finance_Approval_Status__c, &quot;Rejected&quot;))</errorConditionFormula>
    <errorDisplayField>Finance_Approval_Status__c</errorDisplayField>
    <errorMessage
  >This Quote has a Services line below the margin floor and still requires Finance approval; it cannot be Accepted until the Approval Status is Approved.</errorMessage>
</ValidationRule>